[tool.poetry]
name = "pythonproject12"
version = "0.1.0"
description = ""
authors = ["Nastya Foxe <Kukusiki2204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
psycopg = "^3.2.3"
alembic = "^1.13.3"
pika = "^1.3.2"
aio-pika = "^9.4.3"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
